After a B_DIRECT_STOP notification, the app_server could trigger a B_DIRECT_MODIFY with, for example, B_CLIPPING_MODIFIED. This was ignored, though. Now we combine this notification with the next ones, so that on B_DIRECT_START, the client is informed of all the things which have changed. Chart was relying on receiving the B_CLIPPING_MODIFIED notification to exclude some stars from being erased, in case the window went offscreen. Anyway, the net result is that Chart doesn't crash now, and we follow more closely the original BDirectWindow protocol. Fixed ticket #1939.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32392 a95241bf-73f2-0310-859d-f6bbb57e9c96